--- a/app/src/main/res/layout/activity_cardslist.xml
+++ b/app/src/main/res/layout/activity_cardslist.xml
@@ -28,79 +28,7 @@
             android:layout_height="wrap_content"
             android:isScrollContainer="true"
             android:layoutMode="clipBounds"
-            android:orientation="vertical">
-
-            <ImageButton
-                android:id="@+id/fiveCard"
-                android:layout_width="match_parent"
-                android:layout_height="269dp"
-                android:layout_gravity="clip_horizontal|clip_vertical"
-                android:maxHeight="2dp"
-                android:minHeight="1dp"
-                android:scaleType="centerInside"
-                android:scaleX="1"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/five"
-                tools:ignore="SpeakableTextPresentCheck" />
-
-            <ImageButton
-                android:id="@+id/crossCard"
-                android:layout_width="match_parent"
-                android:layout_height="255dp"
-                android:layout_gravity="clip_horizontal"
-                android:scaleType="centerInside"
-                android:scaleX="1"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/cross"
-                tools:ignore="SpeakableTextPresentCheck" />
-
-            <ImageButton
-                android:id="@+id/magneteCard"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="clip_horizontal|clip_vertical"
-                android:scaleType="centerInside"
-                android:scaleX="1"
-                android:visibility="invisible"
-                app:srcCompat="@drawable/magnet"
-                tools:ignore="SpeakableTextPresentCheck" />
-
-            <ImageView
-                android:id="@+id/bindingCardOne"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="0dp"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/five" />
-
-            <ImageView
-                android:id="@+id/bindingCardTwo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="0dp"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/cross" />
-
-            <ImageView
-                android:id="@+id/bindingCardThree"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="0dp"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/magnet" />
-        </LinearLayout>
+            android:orientation="vertical"/>
     </ScrollView>
 
     <Button
